--- a/main.css
+++ b/main.css
@@ -53,15 +53,10 @@ color: #000000;
     align-items: center;
     color: #9F9F9F;
 }
-.active {
-width: 64px;
-height: 30px;
-background: #833AE0;
-border-radius: 3px 0px 0px 3px;
-}
-.cari {
-display: flex;
-height: 60px;
+
+.left-cari, .right-cari {
+ display: flex;
+ height: 60px;
 
 }
 .converter-div {
@@ -73,17 +68,26 @@ height: 60px;
 .right-converter {
   margin-left: 123px;
 }
+.curr-active {
+    background: #833AE0;
+}
+.active0 {
+    border-radius: 3px 0px 0px 3px;
+    width: 64px;
+    height: 30px;
+}
 .active1 {
-   width: 66px;
-   height: 30px;
+    width: 66px;
+    height: 30px;
 }
 .active2 {
     width: 66px;
     height: 30px;
-    }
+}
 .active3 {
     width: 66px;
     height: 30px;
+    border-radius: 0px 3px 3px 0px;
 }
 
 
